# scipp

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
cmake/: Config.cmake.in
include/science/scipp/: logging.h  status.h  threaded.h  version.h.in
include/science/scipp/string/: uuid.h
src/science/scipp/: logging.cpp  threaded.cpp
src/science/scipp/string/: uuid.cpp
